--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,6 @@ dependencies {
     implementation 'com.android.support:cardview-v7:27.0.2'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation 'com.android.support:design:27.0.2'
+// test
+//    implementation 'com.github.LambertCoding:LiteAdapter:1.0'
 }
