--- a/liteadapter/build.gradle
+++ b/liteadapter/build.gradle
@@ -1,14 +1,18 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
+
 apply plugin: 'com.github.dcendents.android-maven'
 
 group='com.github.LambertCoding'
 
 android {
-    compileSdkVersion 27
+    compileSdkVersion 28
 
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 27
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
     }
@@ -26,5 +30,7 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    compileOnly 'com.android.support:recyclerview-v7:27.0.2'
+    compileOnly 'com.android.support:recyclerview-v7:28.0.0'
+
+    api libs.kotlin_stdlib
 }
