--- a/liteadapter/build.gradle
+++ b/liteadapter/build.gradle
@@ -3,10 +3,6 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
-apply plugin: 'com.github.dcendents.android-maven'
-
-group='com.github.LambertCoding'
-
 android {
     compileSdkVersion 28
 
@@ -15,6 +11,10 @@ android {
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
+    }
+
+    dataBinding {
+        enabled = true
     }
 
     buildTypes {
@@ -30,7 +30,6 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    compileOnly 'com.android.support:recyclerview-v7:28.0.0'
-
-    api libs.kotlin_stdlib
+    implementation libs.kotlin_stdlib
+    implementation libs.recyclerview
 }
