--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,15 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".ui.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".EmptyAndLoadMoreActivity" />
-        <activity android:name=".HeaderAndFooterActivity" />
+        <activity android:name=".ui.EmptyAndLoadMoreActivity" />
+        <activity android:name=".ui.HeaderAndFooterActivity" />
+        <activity android:name=".ui.DataBindingSampleActivity" />
     </application>
 
 </manifest>
