--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,11 +4,11 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion 29
     defaultConfig {
         applicationId "me.yuu.sample"
         minSdkVersion 16
-        targetSdkVersion 28
+        targetSdkVersion 29
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -30,19 +30,22 @@ dependencies {
 
     implementation project(':liteadapter')
 
-    implementation libs.appcompat
-    implementation libs.constraint
+    implementation kotlinDeps.kotlin_stdlib
 
-    implementation libs.recyclerview
-    implementation libs.cardview
-    implementation libs.glide
-    kapt libs.glide_compiler
-    implementation libs.design
-    implementation libs.kotlin_stdlib
+    implementation androidxDeps.appcompat
+    implementation androidxDeps.constraint
+    implementation androidxDeps.recyclerview
+    implementation androidxDeps.swiperefresh
+    implementation androidxDeps.cardview
+
+    implementation imageDeps.glide
+    kapt imageDeps.glide_compiler
+
+    implementation uiDeps.design
 
 
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.3.0-alpha05'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-alpha05'
+    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test:runner:1.3.0-beta01'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-beta01'
 
 }
