--- a/liteadapter/build.gradle
+++ b/liteadapter/build.gradle
@@ -1,4 +1,7 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-android-extensions'
 apply plugin: 'com.github.dcendents.android-maven'
 
 android {
@@ -28,6 +31,11 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-    compileOnly libs.appcompat
-    compileOnly libs.recyclerview
+
+    implementation androidxDeps.appcompat
+    compileOnly kotlinDeps.kotlin_stdlib
+    compileOnly androidxDeps.recyclerview
+}
+repositories {
+    mavenCentral()
 }
