增加分组列表和单选列表

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         <activity android:name=".ui.HeaderAndFooterActivity" />
         <activity android:name=".ui.DataBindingSampleActivity" />
         <activity android:name=".ui.RadioActivity" />
+        <activity android:name=".ui.SectionActivity" />
     </application>
 
 </manifest>
